--- a/mandelbulber2/formula/ui/transf_difs_cylinder_v2.ui
+++ b/mandelbulber2/formula/ui/transf_difs_cylinder_v2.ui
@@ -1204,11 +1204,18 @@
        </widget>
       </item>
       <item>
+       <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledB_false">
+        <property name="text">
+         <string notr="true">iteration color</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_26" stretch="0,1">
         <item>
          <widget class="QLabel" name="label_286">
           <property name="text">
-           <string>iter color:</string>
+           <string>iter add color:</string>
           </property>
          </widget>
         </item>
@@ -1451,14 +1458,14 @@
    <container>1</container>
   </customwidget>
   <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
-  </customwidget>
-  <customwidget>
    <class>MySpinBox</class>
    <extends>QSpinBox</extends>
    <header>my_spin_box.h</header>
+  </customwidget>
+  <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
